# robosoccer_ros2

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
src/robosoccer_behavior/: README.md  behavior_tree_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_bringup/: README.md  full_system.launch.py  package.xml  setup.cfg  setup.py
src/robosoccer_control/: README.md  biped_controller_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_description/: README.md  package.xml  setup.cfg
src/robosoccer_diagnostics/: README.md  diagnostics_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_firmware/: README.md  firmware_bridge_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_gamecontrol/: README.md  gamecontrol_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_localization/: README.md  localization_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_motion/: README.md  motion_planner_node.py  package.xml  setup.cfg  setup.py
src/robosoccer_msgs/: README.md  package.xml  setup.cfg  setup.py
src/robosoccer_msgs/msg/: BallPose.msg  ControlCommand.msg  JointCommand.msg  RobotState.msg  TaskState.msg
src/robosoccer_perception/: README.md  package.xml  perception_node.py  sensor_node.py  setup.cfg  setup.py
src/robosoccer_sim/: README.md  mujoco_sim_node.py  package.xml  robosoccer_sample.xml  setup.cfg  setup.py  sim_mujoco.launch.py  test_mujoco_sim_node.py  test_sim.launch.py
src/robosoccer_sim/resource/: test_model.xml
src/robosoccer_world_model/: README.md  package.xml
