<package format="3">
  <name>robosoccer_diagnostics</name>
  <version>0.0.1</version>
  <description>Diagnostics node for RoboSoccer</description>
  <maintainer email="YOUR_EMAIL">YOUR_NAME</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
